[package]
name = "ins-fetch"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[build-dependencies]
# ethers-contract = "2.0.8"


# [build]
# rustflags = ["--cfg", "tokio_unstable"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

tokio = { version = "1.29.0", features = ["full"] }

mongodb = "2.6.0"


base64 = "0.21.7"
arrayref = "0.3.6"


# solana
solana-sdk = { version = "1.16.6" }
solana-client = { version = "1.16.6" }
solana-transaction-status = { version = "1.16.6" }


#console-subscriber = "0.1.8"
#tracing-subscriber = "0.3.16"

tracing-subscriber = { version = "^0.3", features = ["fmt", "env-filter"] }
tracing = "0.1.37"


log = "0.4"
env_logger = "0.10.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

hex = "0.4.3"

mime = "0.3"

config = { version = "0.13.2", features = ["toml"] }

# ethers = { version = "2.0.8", features = ["ws", "rustls", "legacy", "ipc"] }

futures-util = "0.3"
#futures-util = "^0.3.12"

#sled = "0.34.7"
bincode = { version = "2.0.0-rc.2", features = ["serde"] }


# uniswap-rs = { git = "https://github.com/danipopes/uniswap-rs" }


#petgraph = { version = "0.6.2", features = ["serde-1"] }
futures = "0.3"
thiserror = "1.0"
# rbatis = { version = "4.0"}

# rbdc-mysql={version="0.1"}

#mysql = "23.0"
#mysql_common = { version = "*", default-features = false, features = ["frunk"] }

#sqlx

axum = { version = "0.6.18", features = [
    "headers",
    "macros",
    "tower-log",
    "ws",
] }


tokio-stream = { version = "0.1", features = ["sync"] }
headers = "0.3"
jsonwebtoken = "8.0"
once_cell = "1.8"
http = "0.2.8"
bs58 = "0.4.0"
tower = { version = "0.4.0", features = ["timeout", "util"] }
tower-http = { version = "0.4.0", features = ["trace", "fs", "cors"] }
anyhow = "1.0.66"

reqwest = { version = "0.11", features = ["json", "default-tls"] }

hyper = { version = "1.0.0-rc.3", features = ["full"] }

enum-primitive-derive = "^0.1"
num-traits = "^0.1"
rand = "0.8.4"
tungstenite = { version = "0.18.0", features = ["native-tls-vendored"] }
tokio-tungstenite = { version = "*", features = ["native-tls"] }

format-sql-query = "0.4.0"
sqlformat = "0.2.1"

url = "2.3.1"

tokio-postgres = "0.7.7"

crc64fast = "1.0.0"
tokio-cron-scheduler = "0.9.4"
borsh = "0.10.2"
md5 = "0.7.0"
# rayon = "1.6.1"
sha3 = "0.10.3"
rustc-hex = "2.1.0"

# clickhouse-rs = "1.0.0-alpha.1"

chrono = { version = "0.4.19", features = ["serde"] }
chrono-tz = "0.5"

axum-test = "7.2.0"

fred = "6.0.0"

idgenerator = "2.0.0"

[features]
deploy = []
